# knocknock

./: .gitignore  CMakeLists.txt  README.md
config/: knocknock.conf
docu/: authenticationPWA.puml  dbModel.puml  expressSessionDBModel.puml  knocknockOverview.puml  loggingOnSequence.puml  userSessionStates.puml
src/: CMakeLists.txt
src/CryptoTools/: CAESCipherWrapper.cpp  CAESCipherWrapper.h  CAuthenticationChallengeTools.cpp  CAuthenticationChallengeTools.h  CMakeLists.txt  CSHA256Hash.cpp  CSHA256Hash.h
src/DataModel/: CApplication.cpp  CApplication.h  CApplicationParam.cpp  CApplicationParam.h  CMakeLists.txt  CPrivilege.cpp  CPrivilege.h  CRole.cpp  CRole.h  CUser.cpp  CUser.h  CUserSetting.cpp  CUserSetting.h
src/HTTPRestSrv/: CHTTPConnection.cpp  CHTTPConnection.h  CHTTPRestController.cpp  CHTTPRestController.h  CMakeLists.txt  CProcessorRegistry.cpp  CProcessorRegistry.h  CSimpleMatcher.cpp  CSimpleMatcher.h  CURLParser.cpp  CURLParser.h  HTTPServerConfig.h  HTTPServerTypes.h  IRequestProcessor.h  IServiceContext.h  IURLMatcher.h  URLInfo.h
src/dbAccess/: CApplicationData.cpp  CApplicationData.h  CApplicationParamData.cpp  CApplicationParamData.h  CDBStructureBuilder.cpp  CDBStructureBuilder.h  CDatabase.cpp  CDatabase.h  CMakeLists.txt  CPrivilegeData.cpp  CPrivilegeData.h  CRole2PrivilegeMappingData.cpp  CRole2PrivilegeMappingData.h  CRoleData.cpp  CRoleData.h  CSQLiteDriver.cpp  CSQLiteDriver.h  CSystemParamData.cpp  CSystemParamData.h  CUser2RoleMappingData.cpp  CUser2RoleMappingData.h  CUserData.cpp  CUserData.h  CUserSettingsData.cpp  CUserSettingsData.h  IApplicationData.h  IApplicationParamData.h  IDBAccess.h  IDBDriver.h  IPrivilegeData.h  IRole2PrivilegeMappingData.h  IRoleData.h  ISystemParamData.h  IUser2RoleMappingData.h  IUserData.h  IUserSettingsData.h
src/dbDriver/: CMakeLists.txt  CSQLiteDriver.cpp  CSQLiteDriver.h  IDBDriver.h
src/knockEngine/: CAESCipherWrapper.cpp  CAuthMethodFactory.cpp  CAuthMethodFactory.h  CAuthenticationChallengeTools.cpp  CAuthenticator.cpp  CAuthenticator.h  CConfiguration.cpp  CConfiguration.h  CHashFunction.cpp  CHashFunction.h  CKeyValueHelper.cpp  CKeyValueHelper.h  CKnocknockService.cpp  CKnocknockService.h  CMakeLists.txt  CSCRAuthMethod.cpp  CSCRAuthMethod.h  CSHA256AuthMethod.cpp  CSHA256AuthMethod.h  CSession.cpp  CSession.h  CSessionBuilder.cpp  CSessionBuilder.h  CSessionManager.cpp  CSessionManager.h  CSessionVerifier.cpp  CSessionVerifier.h  CSimpleDBAuthMethod.cpp  CSimpleDBAuthMethod.h  CUserSession.h  IAuthenticationMethod.h  IKnocknockService.h  KnocKnockDictionary.h  knocknockTypes.h
test/: CMakeLists.txt  TestCProcessorRegistry.cpp  TestCSimpleMatcher.cpp  TestCURLParser.cpp  authenticationToolsTests.cpp  authenticatorTests.cpp  configurationReaderTest.cpp  cryptoToolsTests.cpp  dbAccessTests.cpp  sessionBuilderTests.cpp
test/TestHTTPRestSrv/: CMakeLists.txt
